[project]
name = "py-123pan-client"
version = "0.1.8"
description = "Unnoficial Python SDK for 123Pan Open Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic"
]

[project.optional-dependencies]
dagster = [
    "dagster>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"